[gd_scene load_steps=12 format=2]

[ext_resource path="res://Asset/Fonts/BOBOHEI-2.otf" type="DynamicFontData" id=1]
[ext_resource path="res://Asset/Sprites/pause_pressed.png" type="Texture" id=2]
[ext_resource path="res://Asset/Sprites/pause_normal.png" type="Texture" id=3]
[ext_resource path="res://Asset/Sprites/coins/gold_1.png" type="Texture" id=4]
[ext_resource path="res://Asset/Scripts/Hub.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
size = 33
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 29
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Control/ColorRect:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Control/PauseMenu:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Control/PauseMenu:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 600 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Control/ColorRect:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "show"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Control/ColorRect:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Control/PauseMenu:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Control/PauseMenu:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ Vector2( 0, 600 ), Vector2( 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Control/ColorRect:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.1, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0.392157 ) ]
}

[node name="Hub" type="Node2D"]
script = ExtResource( 5 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Control"]
visible = false
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )

[node name="HB" type="HBoxContainer" parent="CanvasLayer/Control"]
anchor_right = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = 84.0
custom_constants/separation = 50

[node name="Control" type="Control" parent="CanvasLayer/Control/HB"]
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Control/HB/Control"]
margin_left = 1.0
margin_top = 12.0
margin_right = 85.0
margin_bottom = 96.0
rect_scale = Vector2( 0.5, 0.5 )
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource( 4 )

[node name="CoinText" type="Label" parent="CanvasLayer/Control/HB"]
margin_left = 50.0
margin_top = 15.0
margin_right = 87.0
margin_bottom = 58.0
size_flags_horizontal = 4
custom_fonts/font = SubResource( 1 )
text = ":0"

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Control/HB"]
margin_left = 137.0
margin_right = 137.0
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="PauseBtn" type="TextureButton" parent="CanvasLayer/Control/HB"]
margin_left = 956.0
margin_top = 13.0
margin_right = 1004.0
margin_bottom = 61.0
focus_mode = 0
size_flags_horizontal = 4
size_flags_vertical = 4
toggle_mode = true
action_mode = 0
enabled_focus_mode = 0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 2 )

[node name="PauseMenu" type="CenterContainer" parent="CanvasLayer/Control"]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 600.0
margin_bottom = 600.0

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control/PauseMenu"]
margin_left = 460.0
margin_top = 222.0
margin_right = 564.0
margin_bottom = 378.0
custom_constants/separation = 32

[node name="TitleText" type="Label" parent="CanvasLayer/Control/PauseMenu/VBoxContainer"]
margin_right = 104.0
margin_bottom = 38.0
custom_fonts/font = SubResource( 2 )
text = "Pause"
align = 1

[node name="ResumeBtn" type="Button" parent="CanvasLayer/Control/PauseMenu/VBoxContainer"]
margin_top = 70.0
margin_right = 104.0
margin_bottom = 97.0
custom_fonts/font = SubResource( 3 )
text = "RESUME"

[node name="TitleBtn" type="Button" parent="CanvasLayer/Control/PauseMenu/VBoxContainer"]
margin_top = 129.0
margin_right = 104.0
margin_bottom = 156.0
custom_fonts/font = SubResource( 4 )
text = "Title"

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer"]
pause_mode = 2
anims/RESET = SubResource( 5 )
anims/show = SubResource( 6 )
